--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </button>
     </div>
     <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-cta">
-      <ul class="flex flex-col font-medium text-lg  p-4 md:p-0 mt-4 border  border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+      <ul class="flex flex-col font-medium text-lg  p-4 md:p-0 mt-4 border   rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 ">
 
         <li>
             <a href="#" class="block py-2 px-3 md:pr-2 text-gray-500 hover:text-black rounded transition duration-500 md:hover:bg-transparent md:hover:scale-105 md:dark:hover:bg-transparent  ">Overview</a>
