--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         
         <li>
-          <a href="#" class="block py-2 px-3 md:pr-2 text-gray-500 hover:text-black rounded transition duration-500   md:hover:bg-transparent md:hover:scale-105   dark:text-white   md:dark:hover:bg-transparent  ">Examples</a>
+          <a href="#" class="block py-2 px-3 md:pr-2 text-gray-500 hover:text-black rounded transition duration-500   md:hover:bg-transparent md:hover:scale-105 md:dark:hover:bg-transparent  ">Examples</a>
         </li>
 
         <li>
